--- a/config.toml
+++ b/config.toml
@@ -17,32 +17,37 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [Params]
     subtitle = "dr. Caspar van Lissa" # Subtitle of your site
     description = "Blog about science and syntax" # Description of your site
+    comments = true
     opengraph = true
+    twitter_cards = true # Enable Twitter Cards if true
     readmore = false # Show "Read more" button in list if true
-    leftsidebar = false # Move sidebar to the left side if true
     authorbox = true
     post_navigation = true
-    postSections = ["post"]
-	  RSSSections = [ "post"]
+    post_meta = ["date", "categories"] # Order of post meta information
+    dateformat = "2006-01-02" # Change the format of dates
+    mathjax = true # Enable MathJax
+    mathjaxPath = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js" # Specify MathJax path
+    mathjaxConfig = "TeX-AMS-MML_HTMLorMML" # Specify MathJax config
 
 	[params.logo]
 		logo_url = "developmentaldatascience.png"
+		
+[Params.sidebar]
+  home = "right" # Configure layout for home page
+  list = "right"  # Configure layout for list pages
+  single = false # Configure layout for single pages
+  # Enable widgets in given order
+  widgets = ["search", "recent", "categories", "taglist", "social"]
 
 [Params.widgets]
-    search = true # Enable "Search" widget
-    recent_articles = true # Enable "Recent arcticles" widget
-    categories = true # Enable "Categories" widget
-    tags = true # Enable "Tags" widget
-        tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
-	# Enable "Social" widget, if any of "social_*" set a value
-    social_twitter = "cjvanlissa"
-    social_github = "cjvanlissa"
-    social_email = "c.j.vanlissa@uu.nl"
+    recent_num = 10 # Set the number of articles in the "Recent articles" widget
+    tags_counter = true # Enable counter for each tag in "Tags" widget
     social_rss = "RSS feed"
-    #<!--social_rss = "RSS feed"-->
-	
-[[menu.main]]        
-    name = "R blogs"
-    weight = -120
-    identifier = "R"
-    url = "/categories/r"
+    
+[Params.widgets.social]
+  # Enable parts of social widget
+  twitter = "cjvanlissa"
+  linkedin = "caspar-lissa-36749b46"
+  github = "cjvanlissa"
+  email = "c.j.vanlissa@uu.nl"
+  social_rss = "RSS feed"
