--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   list = "right"  # Configure layout for list pages
   single = false # Configure layout for single pages
   # Enable widgets in given order
-  widgets = ["search", "recent", "categories", "taglist", "social"]
+  widgets = ["search", "recent", "categories", "social", "taglist"]
 
 [Params.widgets]
     recent_num = 10 # Set the number of articles in the "Recent articles" widget
